# legal-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  database.py  docker-compose.yml  main.py  middleware.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
services/: __init__.py  export.py  highlight.py  search.py  stats.py
tests/: conftest.py  test_api.py  test_export.py
