[project]
name = "legal-api"
version = "1.0.0"
description = "FastAPI REST backend for legal case law search and retrieval"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Abdul Salam", email = "get2salam@gmail.com" },
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["database", "models", "services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
